文件保存pannel，完成，sambuffer与nsimage，nsdata之间的转换

--- a/osxmedia/osxmedia/Base.lproj/Main.storyboard
+++ b/osxmedia/osxmedia/Base.lproj/Main.storyboard
@@ -69,6 +69,9 @@
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <menu key="submenu" title="设备" id="Mnn-dC-iOj"/>
                                         </menuItem>
+                                        <menuItem title="截图" id="RKg-yq-VAh">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                        </menuItem>
                                     </items>
                                 </menu>
                             </menuItem>
