--- a/osxmedia/osxmedia/Page/Main/RenderViewController.xib
+++ b/osxmedia/osxmedia/Page/Main/RenderViewController.xib
@@ -5,7 +5,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="PreViewController" customModule="osxmedia" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="RenderViewController" customModule="osxmedia" customModuleProvider="target">
             <connections>
                 <outlet property="preView" destination="sTC-iG-tXw" id="qdw-so-d40"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
