--- a/osxmedia/osxmedia/Page/Main/RenderWindowController.xib
+++ b/osxmedia/osxmedia/Page/Main/RenderWindowController.xib
@@ -5,7 +5,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="PreViewWindowController" customModule="osxmedia" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="RenderWindowController" customModule="osxmedia" customModuleProvider="target">
             <connections>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
             </connections>
