--- a/osxmedia/osxmedia/Page/Main/RenderWindowController.xib
+++ b/osxmedia/osxmedia/Page/Main/RenderWindowController.xib
@@ -7,6 +7,8 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="RenderWindowController" customModule="osxmedia" customModuleProvider="target">
             <connections>
+                <outlet property="leftView" destination="Td2-zL-KL8" id="6ko-PX-h3b"/>
+                <outlet property="rightView" destination="Wpx-Nm-MYz" id="mjQ-Rk-78B"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -20,6 +22,24 @@
             <view key="contentView" id="se5-gp-TjO">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="Td2-zL-KL8">
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="270"/>
+                    </customView>
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="Wpx-Nm-MYz">
+                        <rect key="frame" x="240" y="0.0" width="240" height="270"/>
+                    </customView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Wpx-Nm-MYz" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" id="LsG-M3-uTp"/>
+                    <constraint firstAttribute="bottom" secondItem="Td2-zL-KL8" secondAttribute="bottom" id="Ood-gR-xMj"/>
+                    <constraint firstItem="Wpx-Nm-MYz" firstAttribute="width" secondItem="se5-gp-TjO" secondAttribute="width" multiplier="0.5" id="Qwp-re-Gaw"/>
+                    <constraint firstAttribute="bottom" secondItem="Wpx-Nm-MYz" secondAttribute="bottom" id="c8H-T3-Dqt"/>
+                    <constraint firstAttribute="trailing" secondItem="Wpx-Nm-MYz" secondAttribute="trailing" id="kJ8-E8-rQU"/>
+                    <constraint firstItem="Td2-zL-KL8" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" id="nAT-pI-wC9"/>
+                    <constraint firstItem="Td2-zL-KL8" firstAttribute="width" secondItem="se5-gp-TjO" secondAttribute="width" multiplier="0.5" id="sWH-dw-ykq"/>
+                    <constraint firstItem="Td2-zL-KL8" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" id="xFQ-TJ-cFc"/>
+                </constraints>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
